# radifox

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  COMMIT_INFO.txt  Dockerfile  Dockerfile.dev  LICENSE  README.md  TODO  autoversion.py  pyproject.toml  qa-requirements.txt  requirements.txt  ruff.toml  setup.py
.github/workflows/: build-docker-image.yml  ci.yml  pypi-publish.yml
autoconv/: _version.py  base.py  cli.py  dicom.py  exec.py  image.py  imagefile.py  info.py  json.py  logging.py  lut.py  metadata.py  parrec.py  parrec_writer.py  provenance.py  utils.py
autoconv/parrec_templates/: top_header.txt
autoconv/qa/: qaimage.py  reslicer.py
radifox/: .git_archive.json  __init__.py  _version.py  base.py  exec.py  metadata.py
radifox/conversion/: __init__.py  base.py  cli.py  dicom.py  exec.py  json.py  logging.py  lut.py  metadata.py  nib_parrec_fork.py  parrec.py  parrec_writer.py  utils.py
radifox/conversion/parrec_templates/: gen_info.txt  pixel_values.txt
radifox/modules/: staging.py
radifox/naming/: __init__.py  imagefile.py
radifox/ontology/: imagefile.py
radifox/processing/: __init__.py  staging.py
radifox/provenance/: provenance.py  utils.py
radifox/qa/: Dockerfile  __init__.py  app.py  create.py  resize.py  run.py  utils.py
radifox/qa/templates/: conversion.html  index.html  login.html  processing.html  project.html  session.html  subject.html
radifox/records/: __init__.py  hashing.py  logging.py  processing.py  resize.py  utils.py
tests/: test_import.py
