[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radifox"
dynamic = ["version"]
description = "Core naming, organization, provenance, and staging framework for RADIFOX."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "JH-MIPC", email = "jhmipc@jh.edu" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
    "nibabel",
    "numpy",
    "pillow",
    "pyyaml",
    "scipy",
    "matplotlib",
    "trimesh",
    "networkx",
]

[project.urls]
Homepage = "https://github.com/jh-mipc/radifox"

[project.scripts]
radifox-stage = "radifox.modules.staging:Staging"

[tool.setuptools.dynamic]
version = {attr = "radifox.__version__"}

[tool.setuptools.cmdclass]
build_py = "radifox._version.build_py_cls"
sdist = "radifox._version.sdist_cls"
